// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with empty message 1`] = `
<DocumentFragment>
  <div>
    <p>
      No Expenses Added!
    </p>
  </div>
</DocumentFragment>
`;

exports[`Should render ExpenseList with expenses 1`] = `
<DocumentFragment>
  <div>
    <div>
      <a
        href="/edit/1234"
      >
        <h3>
          Gum
        </h3>
      </a>
      <p>
        $10-August 10th, 2022
      </p>
      <small />
    </div>
  </div>
</DocumentFragment>
`;
